--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>TicTacToe</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Kryds Og Bolle</h1>
 
     <div id="board">
-        <div class="cell">X</div>
-        <div class="cell">O</div>
-        <div class="cell">O</div>
-        <div class="cell">O</div>
-        <div class="cell">O</div>
-        <div class="cell">X</div>
-        <div class="cell">X</div>
-        <div class="cell">X</div>
-        <div class="cell">X</div>
+      <div class="cell" data-row="0" data-col="0">X</div>
+      <div class="cell" data-row="0" data-col="1">O</div>
+      <div class="cell" data-row="0" data-col="2">O</div>
+      <div class="cell" data-row="1" data-col="0">O</div>
+      <div class="cell" data-row="1" data-col="1">O</div>
+      <div class="cell" data-row="1" data-col="2">X</div>
+      <div class="cell" data-row="2" data-col="0">X</div>
+      <div class="cell" data-row="2" data-col="1">X</div>
+      <div class="cell" data-row="2" data-col="2">X</div>
     </div>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
