--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <h1>Kryds Og Bolle</h1>
 
     <div id="board">
-      <div class="cell" data-row="0" data-col="0">X</div>
-      <div class="cell" data-row="0" data-col="1">O</div>
-      <div class="cell" data-row="0" data-col="2">O</div>
-      <div class="cell" data-row="1" data-col="0">O</div>
-      <div class="cell" data-row="1" data-col="1">O</div>
-      <div class="cell" data-row="1" data-col="2">X</div>
-      <div class="cell" data-row="2" data-col="0">X</div>
-      <div class="cell" data-row="2" data-col="1">X</div>
-      <div class="cell" data-row="2" data-col="2">X</div>
+      <div class="cell" data-row="0" data-col="0"></div>
+      <div class="cell" data-row="0" data-col="1"></div>
+      <div class="cell" data-row="0" data-col="2"></div>
+      <div class="cell" data-row="1" data-col="0"></div>
+      <div class="cell" data-row="1" data-col="1"></div>
+      <div class="cell" data-row="1" data-col="2"></div>
+      <div class="cell" data-row="2" data-col="0"></div>
+      <div class="cell" data-row="2" data-col="1"></div>
+      <div class="cell" data-row="2" data-col="2"></div>
     </div>
 
     <script src="script.js"></script>
